tests/error/misc_errors/bad_kwarg.py
from guppylang import guppy


@guppy(foo=42)
def foo() -> None:
    pass
