tests/error/misc_errors/bad_kwarg.err
Traceback (most recent call last):
  File "$FILE", line 4, in <module>
    @guppy(foo=42)
TypeError: Unknown keyword argument: `foo`
